--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,19 +17,25 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse d-sm-inline-flex justify-content-between collapse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index" style='font-size:20px'>Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy" style='font-size:20px'>Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TermsOfService">Terms Of Service</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TermsOfService" style='font-size:20px'>Terms Of Service</a>
                         </li>
                     </ul>
                 </div>
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container">
+                        <!-- Other navbar items -->
+                        <partial name="_LoginPartial" />
+                    </div>
+                </nav>
             </div>
         </nav>
     </header>
