Fixed error message with missing headers

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 <div class='container-fluid'>
     <div class='row'>
         <div class='col-sm-12 body-content'>
-            <h2>Sign in to the Weather Checker</h2>
+            <h2>Sign in to the Smart Lunch WebApp</h2>
 
             <a asp-controller="Account"
                asp-action="ExternalLogin"
