Added gitignore file and login method

--- a/SmartLunch/Views/Account/Login.cshtml
+++ b/SmartLunch/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
             <h2>Sign in to the Smart Lunch WebApp</h2>
 
             <a asp-controller="Account"
-               asp-action="ExternalLogin"
+               asp-action="Login"
                class="btn btn-primary">
                 Log in with Google
             </a>
