--- a/SmartLunch/Views/Shared/_LoginPartial.cshtml
+++ b/SmartLunch/Views/Shared/_LoginPartial.cshtml
@@ -1,33 +1,21 @@
-﻿@* @using System.Security.Claims
+﻿@* <p><a asp-area="" asp-controller="Home" asp-action="Login">Login with Google</a></p> *@
 
-<div class="navbar-nav">
-    @if (User.Identity?.IsAuthenticated == true)
+<ul>
+    @if (Context.User.Identity.IsAuthenticated)
     {
-        <span class="navbar-text" style='font-size:20px'>
-            Welcome, @User.Identity.Name!
-        </span>
-        <a class="nav-link" asp-controller="Account" asp-action="SignOut" style='font-size:20px'>Sign Out</a>
+        <li>
+            <a>Hello @User.Identity.Name</a>
+            <a>Authenticated? @User.Identity.IsAuthenticated</a>
+        </li>
+        <li>
+            @* <a asp-controller="Account" asp-action="Logout">Logout from Google</a> *@
+        </li>
     }
 
     else
     {
-        <a class="nav-link" asp-controller="Account" asp-action="Login">Login</a>
+        <li>
+            <a asp-controller="Account" asp-action="Login">Login with Google</a>
+        </li>
     }
-</div> *@
-
-@if (User.Identity!.IsAuthenticated)
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="SignOut">SignOut</a>
-    </li>
-
-    @* <span class="nav-link text-dark">Welcome, @User.FindFirst(ClaimTypes.GivenName)?.Value!</span> *@
-    <span class="nav-link text-dark">Hi @User.Identity.Name</span>
-}
-
-else
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
-    </li>
-}
+</ul>
