Post endpoint checking if user is in database and update put enpoint for last login date

--- a/SmartLunch/Views/Shared/_LoginPartial.cshtml
+++ b/SmartLunch/Views/Shared/_LoginPartial.cshtml
@@ -5,10 +5,11 @@
     {
         <li>
             <a>Hello @User.Identity.Name</a>
-            <a>Authenticated? @User.Identity.IsAuthenticated</a>
         </li>
         <li>
-            @* <a asp-controller="Account" asp-action="Logout">Logout from Google</a> *@
+            <form asp-controller="Account" asp-action="Logout" method="post">
+                <button type="submit" class="btn btn-link">Logout from Google</button>
+            </form>
         </li>
     }
 
