--- a/SmartLunch/Views/Home/Index.cshtml
+++ b/SmartLunch/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to the Smart Lunch App</h1>
+    <h1 class="display-4">Welcome to the Dev Guard App</h1>
 </div>
