Trying to add role to claims principal and then to sign in

--- a/SmartLunch/Views/Home/Index.cshtml
+++ b/SmartLunch/Views/Home/Index.cshtml
@@ -4,4 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to the Dev Guard App</h1>
+    <br>
+    <h3>DevGuard is a Cross-Platform MVC Web Application with Google 
+        Authentication & Role-Based Access</h3>
 </div>
