--- a/SmartLunch/Views/Shared/_LoginPartial.cshtml
+++ b/SmartLunch/Views/Shared/_LoginPartial.cshtml
@@ -1,27 +1,30 @@
-﻿@* <p><a asp-area="" asp-controller="Home" asp-action="Login">Login with Google</a></p> *@
-
-<ul>
-    @if(Context.User.Identity != null)
-    {
-        @if (Context.User.Identity.IsAuthenticated)
+﻿<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav ms-auto">
+        @if (User?.Identity?.IsAuthenticated ?? false)
         {
-            <li>
-                <a>Hello @User.Identity!.Name</a>
-            </li>
-            <li>
-                <form asp-controller="Account" asp-action="Logout" method="post">
-                    <button type="submit" class="btn btn-link">Logout from Google</button>
-                </form>
-            </li>
+          <li class="nav-item">
+            <span class="nav-link">Hello, @User.Identity.Name</span>
+          </li>
+          <li class="nav-item">
+            <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
+              <button type="submit" class="btn btn btn-danger">
+                Logout
+              </button>
+            </form>
+          </li>
         }
-    }
-
-   
-
-    else
-    {
-        <li>
-            <a asp-controller="Account" asp-action="Login">Login with Google</a>
-        </li>
-    }
-</ul>
+        
+        else
+        {
+          <li class="nav-item">
+            <a class="btn btn-primary" asp-controller="Account" asp-action="Login">
+              Login with Google
+            </a>
+          </li>
+        }
+      </ul>
+    </div>
+  </div>
+</nav>
