Fixed Copyright paragaraph to be at the bottom part

--- a/DevGuard/Views/Shared/_Layout.cshtml
+++ b/DevGuard/Views/Shared/_Layout.cshtml
@@ -48,11 +48,13 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - SmartLunch - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+    <footer class="border-top footer text-muted fixed-bottom bg-light">
+      <div class="container" aria-setsize="19px">
+        &copy; 2025 - DevGuard - 
+        <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+      </div>
     </footer>
+
     
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
